--- a/pre-entrega.01/src/views/home.handlebars
+++ b/pre-entrega.01/src/views/home.handlebars
@@ -3,7 +3,7 @@
 
  <div class="home">
            <ul>
-        {{#each productos}}
+        {{#each products}}
             <li>Title: {{this.title}} - Description: {{this.description}} - Price: {{this.price}} - Thumbnail: {{this.thumbnail}} - Code: {{this.code}} - Stock: {{this.stock}} - Category: {{this.category}} - pid: {{this.pid}} - Status: {{this.status}}</li>
         {{/each}}
         </ul> 
